--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@coreui/angular": "~5.3.16",
+    "@coreui/coreui": "~5.2.0",
+    "@coreui/icons-angular": "~5.3.15",
+    "@popperjs/core": "~2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "mongodb": "^6.13.1",
